Added the Pi4j libs

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>Raspberry</name>
 	<comment></comment>
 	<projects>
+		<project>HelloWorldJSP</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
